Revert "fix: config (#417)"
This reverts commit 0929a8c18cfd8be7c7efba1a74845e091f392d19.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,13 +11,7 @@
 
 <body>
   <div id="root"></div>
-  <script type="module">
-    if (import.meta.env.MODE !== 'development') {
-      const script = document.createElement('script');
-      script.src = '/config.js';
-      document.body.appendChild(script);
-    }
-  </script>
+  <script type="module" src="/config.js"></script>
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
