--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,11 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
   <title>LCFS</title>
+  <script defer type="module" src="/config/config.js"></script>
 </head>
 
 <body>
   <div id="root"></div>
-  <script type="module" src="/config/config.js"></script>
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
